tests/parser/fail/v39_fail_struct_declaration.ep
# COMPILE_FAIL_CONTAINS: Unexpected token
struct Legacy {
    value: i64
}

fun main(): void {
}
